--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     <title>Project Portfolio Setup</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello World</h1>
-      <p>Hi there</p>
-      <i class="fa-brands fa-instagram"></i>
-    </div>
+  <div class="hero">
+    <p>Hello, I am</p>
+    <h1>Mbali Puso</h1>
+    <h2>Front-end developer based in South Africa</h2>
+    <a href="#" class="btn btn-primary">Contact me</a>
+   </div>
   </body>
 </html>
