--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
@@ -20,19 +25,17 @@
       src="https://kit.fontawesome.com/139e73fb13.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
-      rel="stylesheet"
-    />
+    
     <title>Project Portfolio Setup</title>
   </head>
   <body>
   <div class="hero">
-    <p>Hello, I am</p>
+    <p>👋 Hello, I am</p>
     <h1>Mbali Puso</h1>
-    <h2>Front-end developer based in South Africa</h2>
-    <a href="#" class="btn btn-primary">Contact me</a>
+    <h2 class="mb-5">Front-end developer based in South Africa</h2>
+    <div>
+    <a href="#" class="btn btn-branding">Contact me</a>
+    </div>
    </div>
   </body>
 </html>
