--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
     <title>Project Portfolio</title>
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
      <div class="row">
       <div class="col-lg-6">
-      <div class="about-section-content">
+      <div class="content">
       <h1 class="mb-4">Hi I am Mbali Puso</h1>
       <h2 class="mb-4">Frontend Developer, based in South Africa</h2>
       <p class="mb-4">For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with different exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
