--- a/index.html
+++ b/index.html
@@ -103,7 +103,35 @@
       </div>
      </div>
     </div>
-
+    <footer>
+      <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+        <div>
+        <h4>
+          Work Inquiry
+        </h4>
+        <p class="text-muted">
+          Let's work together
+        </p>
+        </div>
+        <div>
+        <a href="" class="btn btn-branding">Contact me</a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+      <a href="mailto:mbalipuso@gmail.com" class="email-link">mbalipuso@gmail.com</a>
+      </div>
+      <div class="social-links text-center">
+      <a href="https://www.instagram.com/mbali.kutlwano" target="_blank">
+      <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="https://www.github.com/MbaliPuso" target="_blank">
+      <i class="fa-brands fa-github"></i>
+      </a>
+      <a href="https://www.twitter.com/MbaliPuso">
+      <i class="fa-brands fa-twitter"></i>
+      </a>
+      </div>
+    </footer>
   </div>
   </body>
 </html>
