--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Mbali Puso is a front-end engineer based in South Africa Johannesburg ">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,26 +27,26 @@
       crossorigin="anonymous"
     ></script>
     
-    <title>Project Portfolio Setup</title>
+    <title>Frontend developer - Mbali Puso</title>
   </head>
   <div class="container">
     <nav class="d-flex justify-content-between">
       <a href="/">
-      <img src="images/logo-1.png" class="logo d-none d-md-block" alt="">
-      <img src="images/logo-small.jpg" class="logo d-block d-md-none" alt="">
+      <img src="images/logo-1.png" class="logo d-none d-md-block" alt="Mbali logo">
+      <img src="images/logo-small.jpg" class="logo d-block d-md-none" alt="Mbali logo">
       </a>
       <ul>
         <li class="active">
-          <a href="/">Home</a>
+          <a href="/" title="Homepage">Home</a>
           </li>
         <li>
-          <a href="/about.html">About</a>
+          <a href="/about.html" title="About Mbali">About</a>
           </li>
         <li>
-          <a href="/work.html">Work</a>
+          <a href="/work.html" title="Mbali's work">Work</a>
           </li>
         <li>
-          <a href="/contact.html">Contact</a>
+          <a href="/contact.html" title="Contact Mbali">Contact</a>
           </li>
       </ul>
     </nav>
