--- a/work.html
+++ b/work.html
@@ -29,6 +29,28 @@
     <title>Project Portfolio</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+        <img src="images/logo-1.png" class="logo d-none d-md-block" alt="Mbali logo">
+        <img src="images/logo-small.jpg" class="logo d-block d-md-none" alt="Mbali logo">
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage">Home</a>
+            </li>
+          <li>
+            <a href="/about.html" title="About Mbali">About</a>
+            </li>
+          <li class="active">
+            <a href="/work.html" title="Mbali's work">Work</a>
+            </li>
+          <li>
+            <a href="/contact.html" title="Contact Mbali">Contact</a>
+            </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
         <div class="content">
             <h1 class="mb-5">Take a look at what I've been working on!</h1>
