--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
     
-    <title>Project Portfolio</title>
+    <title>Mbali Portfolio</title>
   </head>
   <body>
     <div class="container">
@@ -63,9 +63,67 @@
       </div>
 
       <div class="col-lg-6">
-      <img src="images/cwgI-patricia.png" alt="" class="img-fluid">
+      <img src="images/cwgI-patricia.png" alt="Patricia image" class="img-fluid">
       </div>
      </div>
     </div>
+    <footer class="container">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>Work inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-3"
+            title="Contact Mbali"
+          >
+            Contact me
+          </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:mbalipuso@gmail.com"
+          class="email-link"
+          title="Email Mbali"
+        >
+          mbalipuso@gmail.com
+        </a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.github.com/MbaliPuso"
+          target="_blank"
+          title="GitHub Profile"
+        >
+          <i class="fab fa-github"></i>
+        </a>
+        <a
+          href="https://www.instragram.com/mbali.kutlwano"
+          target="_blank"
+          title="instagram Profile"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a
+          href="https://www.twitter.com/mbalipuso"
+          target="_blank"
+          title="Twitter Profile"
+        >
+          <i class="fab fa-twitter"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        ✌️ This website was coded by Mbali Puso, and is
+        <a
+          href="https://github.com/MbaliPuso/git-portfolio-project"
+          target="_blank"
+        >
+          open-sourced
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
