--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <div class="container">
     <nav class="d-flex justify-content-between">
-      <a href="/">
+      <a href="/" title="Homepage">
       <img src="images/logo-1.png" class="logo d-none d-md-block" alt="Mbali logo">
       <img src="images/logo-small.jpg" class="logo d-block d-md-none" alt="Mbali logo">
       </a>
@@ -56,7 +56,7 @@
     <h1>Mbali Puso</h1>
     <h2 class="mb-5">Front-end developer based in South Africa</h2>
     <div>
-    <a href="#" class="btn btn-branding">Contact me</a>
+    <a href="/contact.html" class="btn btn-branding" title="Contact me">Contact me</a>
     </div>
    </div>
 
@@ -65,14 +65,14 @@
    <div class="container">
     <div class="row mb-5">
       <div class="col d-none d-lg-block">
-        <img src="images/yogurt.png" class="img-fluid" alt="">
+        <img src="images/yogurt.png" class="img-fluid" alt="Yogurt app preview">
       </div>
   
       <div class="col">
         <div class="project-description">
         <h2 class="mb-5">Yogurt Project</h2> 
         <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-        <a href="#" class="btn btn-branding-outline">Launch Project</a>
+        <a href="/work.html" class="btn btn-branding-outline">Launch Project</a>
       </div>
      </div>
     </div>
@@ -81,26 +81,26 @@
       <div class="col">
         <div class="project-description">
         <h2 class="mb-5">Weather Project</h2> 
-        <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-        <a href="#" class="btn btn-branding-outline">Launch Project</a>
+        <p class="mb-5" text-muted>I built a Vanilla JavaScript weather app in SheCodes Plus, an advanced 8-week JavaScript coding workshop. Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API’s, real-life development workflow, hosting, and advanced JavaScript. I combined all of these skills to create a fully-functioning weather app.</p>
+        <a href="/work.html" class="btn btn-branding-outline">Launch Project</a>
       </div>
      </div>
 
      <div class="col d-none d-lg-block">
-      <img src="images/weather.png" class="img-fluid" alt="">
+      <img src="images/weather.png" class="img-fluid" alt="Weather project preview">
      </div>
     </div>
 
     <div class="row">
       <div class="col d-none d-lg-block">
-        <img src="images/dictionary.png" class="img-fluid" alt="">
+        <img src="images/dictionary.png" class="img-fluid" alt="Dictionary app preview">
       </div>
   
       <div class="col">
         <div class="project-description">
-        <h2 class="mb-5">Dictionary Project</h2> 
-        <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-        <a href="#" class="btn btn-branding-outline">Launch Project</a>
+        <h2 class="mb-5">Dictionary App</h2> 
+        <p class="mb-5 text-muted">I immersed myself in React development in SheCodes React. I used my knowledge of this highly-demanded framework to build a working dictionary app incorporating coding best practices, along with the most popular tools and technologies.</p>
+        <a href="/work.html" class="btn btn-branding-outline">Launch Project</a>
       </div>
      </div>
     </div>
@@ -115,23 +115,33 @@
         </p>
         </div>
         <div>
-        <a href="" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact Mbali">Contact me</a>
         </div>
       </div>
       <div class="d-flex justify-content-center mb-5">
-      <a href="mailto:mbalipuso@gmail.com" class="email-link">mbalipuso@gmail.com</a>
+      <a href="mailto:mbalipuso@gmail.com" class="email-link" title="Email Mbali">mbalipuso@gmail.com</a>
       </div>
       <div class="social-links text-center">
-      <a href="https://www.instagram.com/mbali.kutlwano" target="_blank">
+      <a href="https://www.instagram.com/mbali.kutlwano" target="_blank" title="Instagram Profile">
       <i class="fa-brands fa-instagram"></i>
       </a>
-      <a href="https://www.github.com/MbaliPuso" target="_blank">
+      <a href="https://www.github.com/MbaliPuso" target="_blank" title="Github Profile">
       <i class="fa-brands fa-github"></i>
       </a>
-      <a href="https://www.twitter.com/MbaliPuso">
+      <a href="https://www.twitter.com/MbaliPuso" target="_blank" title="Twitter Profile">
       <i class="fa-brands fa-twitter"></i>
       </a>
       </div>
+
+      <p class="text-center mt-5">
+        ✌️ This website was coded by Mbali Puso, and is
+        <a
+          href="https://github.com/MbaliPuso/git-portfolio-project"
+          target="_blank"
+        >
+          open-sourced
+        </a>
+      </p>
     </footer>
   </div>
   </body>
