--- a/work.html
+++ b/work.html
@@ -26,12 +26,12 @@
       crossorigin="anonymous"
     ></script>
     
-    <title>Project Portfolio</title>
+    <title>Mbali Portfolio</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Homepage">
         <img src="images/logo-1.png" class="logo d-none d-md-block" alt="Mbali logo">
         <img src="images/logo-small.jpg" class="logo d-block d-md-none" alt="Mbali logo">
         </a>
@@ -57,30 +57,87 @@
 
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <img src="images/yogurt.png" class="img-fluid mb-3 rounded" alt="">
+                    <img src="images/yogurt.png" class="img-fluid mb-3 rounded" alt="Yogurt project review">
                     <h3 class="text-center m-0">Yogurt Project</h3>
                     <p class="text-center text-muted">Built with HTML and CSS</p>
                 </div>
 
                 <div class="col-md-6">
-                    <img src="images/weather.png" class="img-fluid mb-3 rounded" alt="">
+                    <img src="images/weather.png" class="img-fluid mb-3 rounded" alt="Weather project preview">
                     <h3 class="text-center m-0">Weather Project</h3>
                     <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                 </div>
 
                 <div class="col-md-6 mb-4">
-                    <img src="images/dictionary.png" class="img-fluid mb-3 rounded" alt="">
+                    <img src="images/dictionary.png" class="img-fluid mb-3 rounded" alt="Dictionary app preview">
                     <h3 class="text-center m-0">Dictionary App</h3>
                     <p class="text-center text-muted">Built with HTML and CSS with React</p>
                 </div>
 
                 <div class="col-md-6 mb-4">
-                    <img src="images/translation.png" class="img-fluid mb-3" alt="">
+                    <img src="images/translation.png" class="img-fluid mb-3" alt="Translation app preview">
                     <h3 class="text-center m-0">Translation App</h3>
-                    <p class="text-center text-muted">Built with HTML and CSS with React</p>
+                    <p class="text-center text-muted">Built using HTML, an active API, advanced CSS with React</p>
                 </div>
             </div>
         </div>
     </div>
+    <footer class="container">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-3"
+            title="Contact Mbali"
+          >
+            Contact me
+          </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:mbalipuso@gmail.com"
+          class="email-link"
+          title="Email Mbali"
+        >mbalipuso@gmail.com
+        </a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.github.com/MbaliPuso"
+          target="_blank"
+          title="GitHub Profile"
+        >
+          <i class="fab fa-github"></i>
+        </a>
+        <a
+          href="https://www.instragram.com/mbali.kutlwano"
+          target="_blank"
+          title="instragram Profile"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a
+          href="https://www.twitter.com/MbaliPuso"
+          target="_blank"
+          title="Twitter Profile"
+        >
+          <i class="fab fa-twitter"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        ✌️ This website was coded by Mbali Puso, and is
+        <a
+          href="https://github.com/MbaliPuso/git-portfolio-project"
+          target="_blank"
+        >
+          open-sourced
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
