--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                   <button type="submit" class="btn btn-branding">Send</button>
                 </form>
               </div>
-            
+          <div class="col-md-4">
             <h3>Email</h3>
             <p>
                 <a href="mailto:mbalipuso@gmail.com">mbalipuso@gmail.com</a> </p>
@@ -96,7 +96,8 @@
                 <a href="https://www.instagram.com/mbali.kutlwano" target="_blank">@mbali.kutlwano</a></p>
             <h3>Twitter</h3>
             <p>
-                <a href="https://www.twitter.com/MbaliPuso" target="_blank">@MbaliPuso</a></p>
+              <a href="https://www.twitter.com/MbaliPuso" target="_blank">@MbaliPuso</a></p>
+            </div> 
         </div>
     </div>
     <footer class="container">
